Extracted methods using SQLiteDatabase from CustomerOrderActivity, disabled LoginButton, Extracted OrderSummary http methods

--- a/app/src/main/res/layout/order_summary_holder.xml
+++ b/app/src/main/res/layout/order_summary_holder.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView_order_summary_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="center|top"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
