--- a/app/src/main/res/layout/customer_order.xml
+++ b/app/src/main/res/layout/customer_order.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView_Product_chosen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="center"
         android:layout_margin="25dp"
         android:background="#EEEEEE"
