--- a/app/src/main/res/layout/prdouct_list.xml
+++ b/app/src/main/res/layout/prdouct_list.xml
@@ -23,7 +23,7 @@
                 android:text="Product Name" />
 
             <TextView
-                android:id="@+id/textViewProduct_qty"
+                android:id="@+id/textViewProduct_QTY"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
