--- a/app/src/main/res/layout/customer_order.xml
+++ b/app/src/main/res/layout/customer_order.xml
@@ -50,6 +50,8 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:background="#AAAAAA"
+                    android:popupBackground="#AAAAAA"
                     android:textSize="20dp" />
             </TableRow>
 
