--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -9,43 +9,62 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center">
+
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_height="match_parent">
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/editText_username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="40dp"
-            android:ems="20"
-            android:gravity="center_horizontal"
-            android:hint="username">
+            <EditText
 
-            <requestFocus />
-        </EditText>
+                android:id="@+id/editText_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="35dp"
+                android:layout_marginTop="40dp"
+                android:background="@drawable/edittext_shape"
+                android:ems="20"
+                android:gravity="center_horizontal"
+                android:hint="username"
+                android:padding="3dp"
+                android:textColor="#000000"
+                android:textColorHint="#4f4f4f"
+                android:textSize="25dp"
+                android:textStyle="italic">
 
-        <EditText
-            android:id="@+id/editText_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="20"
-            android:gravity="center_horizontal"
-            android:hint="password"
-            android:inputType="textPassword" />
+                <requestFocus />
+            </EditText>
 
-        <Button
-            android:id="@+id/button_login"
-            android:layout_width="200dp"
-            android:layout_height="75dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="25dp"
-            android:background="@drawable/btn_login"
-            android:layout_marginBottom="25dp" />
+            <EditText
+                android:id="@+id/editText_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="35dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/edittext_shape"
+                android:ems="20"
+                android:gravity="center_horizontal"
+                android:hint="password"
+                android:padding="3dp"
+                android:textColor="#000000"
+                android:textColorHint="#4f4f4f"
+                android:textSize="25dp"
+                android:textStyle="italic" />
+
+            <Button
+                android:id="@+id/button_login"
+                android:layout_width="200dp"
+                android:layout_height="75dp"
+                android:layout_marginBottom="25dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/btn_login" />
         </LinearLayout>
     </com.daimajia.slider.library.SliderLayout>
 
