--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -20,19 +20,19 @@
 
                 android:id="@+id/editText_username"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="35dp"
                 android:layout_marginRight="35dp"
                 android:layout_marginTop="40dp"
                 android:background="@drawable/edittext_shape"
                 android:ems="20"
-                android:gravity="center_horizontal"
+                android:gravity="center|bottom"
                 android:hint="username"
+                android:textSize="22dp"
                 android:padding="3dp"
                 android:textColor="#000000"
-                android:textColorHint="#4f4f4f"
-                android:textSize="25dp"
+                android:textColorHint="#8f8f8f"
                 android:textStyle="italic">
 
                 <requestFocus />
@@ -41,19 +41,20 @@
             <EditText
                 android:id="@+id/editText_password"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="35dp"
                 android:layout_marginRight="35dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/edittext_shape"
                 android:ems="20"
-                android:gravity="center_horizontal"
+                android:gravity="center|bottom"
                 android:hint="password"
+                android:inputType="textPassword"
                 android:padding="3dp"
                 android:textColor="#000000"
-                android:textColorHint="#4f4f4f"
-                android:textSize="25dp"
+                android:textColorHint="#8f8f8f"
+                android:textSize="22dp"
                 android:textStyle="italic" />
 
             <Button
