Added class for URLs, Removed classes with relation to products and merged them in ProductManager.class,

--- a/app/src/main/res/layout/reorder.xml
+++ b/app/src/main/res/layout/reorder.xml
@@ -37,7 +37,7 @@
     <ListView
         android:id="@+id/listView_reorder"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:backgroundTint="#D3D3D3"
