--- a/app/src/main/res/layout/admin_page.xml
+++ b/app/src/main/res/layout/admin_page.xml
@@ -9,16 +9,30 @@
         android:layout_height="match_parent"
         android:background="@drawable/bg_login">
 
+        <com.rey.material.widget.TabPageIndicator
+            android:id="@+id/adminpage_header"
+            style="@style/Material.Widget.TabPageIndicator"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_alignParentTop="true" />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/adminpage_pages"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignParentTop="true"
+            android:layout_weight="1" />
+
         <Button
             android:id="@+id/button_productList"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="25dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:layout_marginTop="194dp"
-            android:layout_marginBottom="25dp"
+            android:layout_marginTop="80dp"
             android:background="@drawable/bg_button"
             android:text="@string/product_list" />
 
