--- a/app/src/main/res/layout/prdouct_list.xml
+++ b/app/src/main/res/layout/prdouct_list.xml
@@ -12,7 +12,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#d3d3d3"
+            android:background="#212121"
             android:weightSum="4" >
 
             <TextView
