--- a/app/src/main/res/layout/dialog_reorder.xml
+++ b/app/src/main/res/layout/dialog_reorder.xml
@@ -30,6 +30,7 @@
 
         <EditText
             android:id="@+id/editText_dialog_qty"
+            android:freezesText="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
