--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -29,12 +29,12 @@
                 android:ems="20"
                 android:gravity="center|bottom"
                 android:hint="username"
-                android:textSize="22dp"
+                android:nextFocusDown="@+id/editText_password"
                 android:padding="3dp"
                 android:textColor="#000000"
                 android:textColorHint="#8f8f8f"
+                android:textSize="22dp"
                 android:textStyle="italic">
-
                 <requestFocus />
             </EditText>
 
