--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/loginLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
@@ -7,48 +8,39 @@
     <com.daimajia.slider.library.SliderLayout
         android:id="@+id/mySlider"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:gravity="center"/>
 
             <EditText
-
                 android:id="@+id/editText_username"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_gravity="center_horizontal"
+                android:layout_centerInParent="true"
                 android:layout_marginLeft="35dp"
                 android:layout_marginRight="35dp"
-                android:layout_marginTop="40dp"
                 android:background="@drawable/edittext_shape"
-                android:ems="20"
-                android:gravity="center|bottom"
+                android:gravity="center"
                 android:hint="username"
-                android:nextFocusDown="@+id/editText_password"
+                android:imeOptions="actionNext"
                 android:padding="3dp"
                 android:textColor="#000000"
                 android:textColorHint="#8f8f8f"
                 android:textSize="22dp"
                 android:textStyle="italic">
-                <requestFocus />
+
             </EditText>
 
             <EditText
                 android:id="@+id/editText_password"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_gravity="center_horizontal"
+                android:layout_below="@+id/editText_username"
                 android:layout_marginLeft="35dp"
                 android:layout_marginRight="35dp"
+                android:imeOptions="actionGo"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/edittext_shape"
-                android:ems="20"
-                android:gravity="center|bottom"
+                android:gravity="center"
                 android:hint="password"
                 android:inputType="textPassword"
                 android:padding="3dp"
@@ -61,13 +53,15 @@
                 android:id="@+id/button_login"
                 android:layout_width="200dp"
                 android:layout_height="75dp"
+                android:layout_below="@+id/editText_password"
+                android:layout_centerHorizontal="true"
                 android:layout_marginBottom="25dp"
                 android:layout_marginEnd="40dp"
                 android:layout_marginStart="40dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/btn_login" />
-        </LinearLayout>
-    </com.daimajia.slider.library.SliderLayout>
 
 
-</LinearLayout>
+
+
+</RelativeLayout>
