--- a/app/src/main/res/layout/order_summary.xml
+++ b/app/src/main/res/layout/order_summary.xml
@@ -30,7 +30,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="55dp"
         android:layout_weight="1"
         android:gravity="center"
         android:weightSum="2">
@@ -43,6 +43,7 @@
             android:background="#FFFFFF"
             android:padding="2dp"
             android:text="Grand Total"
+            android:textColor="#010101"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView
